src/assets/sass/custom/_devp.scss
/* ... */
.lps_heading{
  margin-top: 30px;
}
@media screen and (max-width: 1024px){
.lps_arrow_approval{
  z-index: 100;
}
}

.plans_mobile_top{
  margin-top: 15px;
}

.lps_fields.access-code-data{
  max-width: 510px !important;
}

.popup_cont{
  .homeModalLogo{
    width: auto !important;
    transform: inherit !important;
  }
  .lps_top_imgs{
    background: transparent !important;
  }
}

.lps_neon_pink_border{
  border: 1px solid #FF6EC7;
}

@media screen and (max-width: 768px){
  .post_links_tags{
    position: absolute;
    bottom: 30px;
    left: 0;
    right: 0;
    width: 100%;
    margin-top: 100px !important;
    display: block;
  }
  .view_more_button{
    margin-bottom: 100px !important;
  }
}

@media screen and (max-width: 768px){
  .finish_btn {
    line-height: 30px !important;
  }
}

